# CSCI1230_Final_Project

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  submission-action.md  submission-lights-camera.md
resources/shaders/: default.frag  default.vert  particle.frag  particle.vert  pointparticle.frag  pointparticle.vert  texture.frag  texture.vert
scenefiles/particle-systems/: camera.json
src/: camera.cpp  camera.h  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h  test.txt
src/ParticleSystem/: FountainEmitter.cpp  FountainEmitter.h  IntParticleEmitter.cpp  IntParticleEmitter.h  ParticleManager.cpp  ParticleManager.h  PointParticleManager.cpp  PointParticleManager.h  QuadParticleManager.cpp  QuadParticleManager.h  hello_world.cl  hello_world.cpp  hello_world.h  model.cpp  model.h  particle.cl  pointparticle.cl  texture.cpp
src/shapes/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  sphere.cpp  sphere.h
src/utils/: sceneparser.cpp  shaderloader.h
